--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div id="app"></div>
 </body>
-<script type="module" src=""></script>
+<script type="module" src="./src/js/main.js"></script>
 </html>
